--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,18 @@
 <resources>
     <string name="app_name">HeartFit</string>
+    <string-array name="c_type">
+        <item>Client</item>
+        <item>Ambulance</item>
+    </string-array>
+    <string name="title_activity_after_login">AfterLoginActivity</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+
+    <string name="action_settings">Settings</string>
+    <string name="title_activity_client_maps">Map</string>
+    <string name="title_activity_ambulance_maps">Map</string>
+    <string name="title_activity_nearby">Map</string>
+    <string name="title_activity_map">Map</string>
+
 </resources>
